--- a/a.html
+++ b/a.html
@@ -8,7 +8,7 @@
     </script>
 </head>
 <body onLoad="JavaScript:timeRefresh(5*60*1000);">
- <iframe scrolling="no" frameborder="0"  src="http://www.bayram.somee.com/" width=100% height=98%></iframe>
+ <iframe scrolling="no" frameborder="0"  src="http://www.blabla.com/" width=100% height=98%></iframe>
 
 </body>
 </html>
